# caw-link-desktop

./: Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
src/: lib.rs  main.rs  winit_helper.rs
src/caw/: README.md  connector.rs  event.rs  mod.rs
src/caw/chart/: plot.rs
src/caw/devices/: device.rs  mod.rs  serial.rs
src/caw/protocols/: bms.rs  code.rs  discover.rs  mod.rs  pingpong.rs  protocol.rs
src/caw/utils/: crypto.rs
tests/: bincode_test.rs
ui/: appwindow.slint  index.slint
ui/bms/: cell.slint  list_item.slint  note_state.slint  note_value.slint  view.slint
ui/device/: device.slint  list.slint
ui/log/: view.slint
ui/models/: bms.slint  device.slint
ui/widgets/: plot.slint  progress.slint
