[package]
name = "caw-link-desktop"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["FakeRick <rick@guaik.io>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.3.0"
slint = "1.0"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
bincode = "1.3.3"

[build-dependencies]
slint-build = "1.0"
